Pretty drastic re-architecture of the Data and SiteUser code for more (maybe less?!) seperation between the layers. Finish the Slog admin page. Delete the authorize control because it sucked.

--- a/longueur/todo.txt
+++ b/longueur/todo.txt
@@ -1,5 +1,6 @@
+- Controller for User stuff. (UserSystem.Save(), UserSystem.Delete())
+
 - More admin functionality for slog (browse, delete, edit)
-- Randomize Slog title
 - Slog tags
 
 - Better error handling (IP, url that errored, innerexception, more of that good stuff)
