Separated the SiteUser (domain) and Data layer for better separation. And updated a ton of pages to get everything to work.

--- a/longueur/todo.txt
+++ b/longueur/todo.txt
@@ -1,4 +1,5 @@
 - Controller for User stuff. (UserSystem.Save(), UserSystem.Delete())
+- Admin functionality to delete user
 
 - More admin functionality for slog (browse, delete, edit)
 - Slog tags
@@ -15,4 +16,6 @@
 - Remember me functionality (front-end only. I think)
 
 - Forms auth on IndieLyrics
-	- use login control on the indielyrics login page
+	- use login control on the indielyrics logn page
+
+-RSS feeds
