Move code into separate folders for more organization. Add SiteUsers class which will hold a collection of SiteUser objects.

--- a/longueur/todo.txt
+++ b/longueur/todo.txt
@@ -1,6 +1,7 @@
-- Controller for User stuff. (UserSystem.Save(), UserSystem.Delete())
+- Namespaces for data, membership classes
 - Admin functionality to delete user
 
+- Slog domain layer
 - More admin functionality for slog (browse, delete, edit)
 - Slog tags
 
