--- a/longueur/todo.txt
+++ b/longueur/todo.txt
@@ -1,18 +1,19 @@
+- The Hillellies "blog"
+
 - Admin functionality to delete user
 - Prevent people from fucking w/ people higher than themselves
 - Superuser
 
 - Better error handling (IP, url that errored, innerexception, more of that good stuff)
 - Better error oops page (maybe should be .net). Link to referrer?
-- Log incorrect login attempts
+- Log correct/incorrect login attempts
+- Block 3 bad login attempts (both by checking IP and/or keeping track in the page)
 
 - Slog domain layer
 - More admin functionality for slog (browse, delete, edit)
 - Slog tags
 
 - Fancy-up the gridview on the admin pages
-
-- Update TheHillellies
 
 - Encrypt web.config
 - Remember me functionality (front-end only. I think)
@@ -21,3 +22,5 @@
 	- use login control on the indielyrics login page
 
 -RSS feeds (for everything!)
+
+- don't count a configuration IP address (mine!) from being logged in downloads
