Fix caching issue with Archives ctrl. Add tag and recent entry boxes. Shorten logo area.

--- a/longueur/todo.txt
+++ b/longueur/todo.txt
@@ -35,6 +35,8 @@
 	- Encrypt web.config
 	- Remember me functionality (front-end only. I think)
 	- don't count a configuration IP address (mine!) from being logged in downloads
+	- cookie wrapper
+	- Theme wrapper
 
 - IndieLyrics
 	- Forms auth on IndieLyrics
