--- a/SharpFile/ChangeLog.txt
+++ b/SharpFile/ChangeLog.txt
@@ -1,10 +1,13 @@
+0.25
+	Icon retrieval for files and directories.
+
 0.2
-	Textbox for specific path retrieval
-	Wildcard pattern filtering on files
-	Asynchronous retrieval of files/folders
+	Textbox for specific path retrieval.
+	Wildcard pattern filtering on files.
+	Asynchronous retrieval of files/folders.
 
 0.1
-	Proof of concept MDI application
-	Retrieves drives
-	Retrieves files and folders
-	Root/parent custom files
+	Proof of concept MDI application.
+	Retrieves drives.
+	Retrieves files and folders.
+	Root/parent custom files.
