--- a/SharpFile/ChangeLog.txt
+++ b/SharpFile/ChangeLog.txt
@@ -1,3 +1,6 @@
+0.35
+	Right-click context menu.
+
 0.30
 	Show progress on long-running operations.
 	Re-organization of code. Split out non-UI assemblies from the UI.
