--- a/SharpFile/ChangeLog.txt
+++ b/SharpFile/ChangeLog.txt
@@ -1,5 +1,6 @@
 0.35
 	Right-click context menu.
+	Preliminary support for drag-and-drop operations.
 
 0.30
 	Show progress on long-running operations.
