--- a/SharpFile/Thanks.txt
+++ b/SharpFile/Thanks.txt
@@ -19,6 +19,9 @@ http://www.codeproject.com/csharp/Explorer_Drag_Drop.asp
 Full-featured, plug-in-able Explorer-clone (which I didn't realize was already done when I started) - Stephen Roberts
 http://www.codeproject.com/cs/miscctrl/FileBrowser.asp
 
+System Image List - Steve McMahon
+http://www.vbaccelerator.com/home/NET/Code/Libraries/Shell_Projects/SysImageList/article.asp
+
 Plus, many others made silent contributions along the way including the Commander clones 
 (Total Commander, Norton Commander, Midnight Commander, Servant Salamander) and numerous 
 other articles, tips and tricks.
