--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -1,15 +1,12 @@
-- Selection of current drive in dropdown
+- Selection of current drive in dropdowns
 - Refresh of drive listing when new drives are entered
-- Image of drive type in dropdown
 - Refresh button
 - Sorting of listview
 - Full row select
 - Able to cancel long-running operations (esc?)
 - Drag-and-drop support for links (both ways)
-- Get icons in a background thread (add icon to imagelist, retrieval, etc.)
-- thumbnail files when possible
+- thumbnail files when possible (images?)
 - show an icon of the file being dragged around
-- Explore using SystemImageList class instead of iconmanager
 - Clean up menus and icons at top (some don't apply)
 - Make sure that all code in UI (child) is neccessary and couldn't be moved to infrastructure/IO
 - Prevent drag-and-drop operation if it is completed in less than some arbitrary time limit (200 ms?)
@@ -18,6 +15,9 @@
 - Second selection to rename
 - Rename directories
 - Information/Property slideable "pane" list vista's file manager
+- only show scroll buttons on child tabcontrol when necessary
+- middle-click to close tabs, mouse wheel, ctrl-tab functionality
+- refactor iconreader
 
 - true dual-pane mode, as opposed to hacky MDI mode
 - Tabbed MDI interface
