--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -13,10 +13,11 @@
 - Prevent flicker in toolstrip when resizing
 - Validate rename before-hand and throw up tooltip or something
 - Second selection to rename
-- Rename directories
 - Information/Property slideable "pane" list like vista's file manager
 - only show scroll buttons on child tabcontrol when necessary
 - middle-click to close tabs, mouse wheel, ctrl-tab functionality
+- Hot-tracking listview
+- Full-row select
 
 - true dual-pane mode, as opposed to hacky MDI mode
 - Tabbed MDI interface
@@ -29,4 +30,8 @@
 
 BUG
 - Get rid of folder icon for root and parent directories
-- When refresh occurs of directory, listview scrolls to the top
+- "System Volum Information folder" never returns any information
+
+Vista issues
+	No icon overlay
+	Ugly child-tab buttons (I want them flat)
