--- a/SharpFile/Thanks.txt
+++ b/SharpFile/Thanks.txt
@@ -16,6 +16,9 @@ http://www.andrewvos.com/?p=190
 Drag-and-drop operations - Paul Tallett
 http://www.codeproject.com/csharp/Explorer_Drag_Drop.asp
 
+Plethora of tab control-related information - Mick Doherty
+http://www.dotnetrix.pwp.blueyonder.co.uk/tabcontrols.html
+
 Full-featured, plug-in-able Explorer-clone (which I didn't realize was already done when I started) - Stephen Roberts
 http://www.codeproject.com/cs/miscctrl/FileBrowser.asp
 
