Refactored login methods to take plain text password before logging in. Log valid and invalid login attempts. Clean up redirecting in try/catch blocks which always throw a thread abort exception.

--- a/longueur/todo.txt
+++ b/longueur/todo.txt
@@ -10,10 +10,10 @@
 	- Add ExchangeReader
 
 - Admin
-	- add new tags
+	- tags admin
 	- delete entry
 	- delete user
-	- Links admin page
+	- Links admin
 	- Prevent people from messing w/ people higher than themselves
 	- Superuser
 	- Fancy-up the gridview
