Clean up code. Make sure that directories are inserted in the correct location when they are moved. Move directory functionality. Refactor all directory/file related functions.

--- a/SharpFile/ChangeLog.txt
+++ b/SharpFile/ChangeLog.txt
@@ -1,3 +1,9 @@
+0.50
+	Dual view.
+	Drag and drop re-written; directories now supported.
+	Beginnings of some settings support.
+	FIX: Updates on right-click operations now works correctly.
+
 0.40
 	Completely flicker-less listview refreshes.
 	Rename directories.
