--- a/SharpFile/ChangeLog.txt
+++ b/SharpFile/ChangeLog.txt
@@ -1,7 +1,9 @@
 0.50
 	Dual view.
 	Drag and drop re-written; directories now supported.
-	Beginnings of some settings support.
+	Beginnings of some settings support (height and width saved).
+	Faster updates of items on file operations.
+	Save current paths on exit.
 	FIX: Updates on right-click operations now works correctly.
 
 0.40
