--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -4,8 +4,11 @@ BUGS
 - Drag drop weirdness
 - Network drive (z:) not sorted correctly
 - Multiple filewatcher events fire on one file operation -- catch them all and just update once?
+- Filter textbox too small to fit
+- Flickering textboxes when resizing
 
 TODO
+- No hardcoded parent/child form stuff
 - Update parent form with path info	
 - Log4net support to log detailed debug logs
 - Save the position of the seperator for the dual file view
@@ -21,7 +24,6 @@ TODO
 - Clean up menus and icons at top (some don't apply)
 - Make sure that all code in UI (child) is neccessary and couldn't be moved to infrastructure/IO
 - Prevent drag-and-drop operation if it is completed in less than some arbitrary time limit (200 ms?)
-- Prevent flicker in toolstrip when resizing
 - Validate rename before-hand and throw up tooltip or something
 - Information/Property slideable "pane" list like vista's file manager
 - middle-click to close tabs, mouse wheel, ctrl-tab functionality
